# src/models/user.model.ts
@@ -1,69 +1,101 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendMail } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
-export interface User{
-    fullname: string;
-    username: string;
-    email: string;
-    password: string;
-    role: string;
-    profilePicture: string;
-    isActive: boolean;
-    activationCode: string;
+export interface User {
+  fullname: string;
+  username: string;
+  email: string;
+  password: string;
+  role: string;
+  profilePicture: string;
+  isActive: boolean;
+  activationCode: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
 
-
-const UserSchema = new Schema<User>({
+const UserSchema = new Schema<User>(
+  {
     fullname: {
-        type: Schema.Types.String,
-        required: true,
+      type: Schema.Types.String,
+      required: true,
     },
     username: {
-        type: Schema.Types.String,
-        required: true,
+      type: Schema.Types.String,
+      required: true,
+      unique: true,
     },
     email: {
-        type: Schema.Types.String,
-        required: true,
+      type: Schema.Types.String,
+      required: true,
+      unique: true,
     },
     password: {
-        type: Schema.Types.String,
-        required: true,
+      type: Schema.Types.String,
+      required: true,
     },
     role: {
-        type: Schema.Types.String,
-        enum: ['user', 'admin'],
-        default: 'user',
+      type: Schema.Types.String,
+      enum: ["user", "admin"],
+      default: "user",
     },
     profilePicture: {
-        type: Schema.Types.String,
-        default: 'user.jpg'
+      type: Schema.Types.String,
+      default: "user.jpg",
     },
     isActive: {
-        type: Schema.Types.Boolean,
-        default: false
+      type: Schema.Types.Boolean,
+      default: false,
     },
     activationCode: {
-        type: Schema.Types.String,
+      type: Schema.Types.String,
     },
-},{
+  },
+  {
     timestamps: true,
+  }
+);
+
+UserSchema.pre("save", function (next) {
+  const user = this;
+  user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
+  next();
 });
 
-UserSchema.pre("save", function(next){
-    const user = this;
-    user.password = encrypt(user.password);
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+    console.log("Send Email to: ", user.email);
+    const contentMail = await renderMailHtml("registerationSuccess.ejs", {
+      username: user.username,
+      fullname: user.fullname,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+    await sendMail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Activasi Akun Anda",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.log("error > ", error);
+  } finally {
     next();
-})
+  }
+});
 
-UserSchema.methods.toJSON = function(){
-    const user = this.toObject();
-    delete user.password;
-    return user;
-}
+UserSchema.methods.toJSON = function () {
+  const user = this.toObject();
+  delete user.password;
+  return user;
+};
 
-const UserMonel = mongoose.model('User', UserSchema);
+const UserMonel = mongoose.model("User", UserSchema);
 
 export default UserMonel;
